--- a/templates/landing.html
+++ b/templates/landing.html
@@ -14,7 +14,7 @@
   <div class="row align-items-center justify-content-center" id="land-cont">
     <div class="col-md-8 text-center m-0 p-0 fixed-top position-relative">
       <a class="animate__animated animate__fadeIn m-0 p-0" id="nextPage" href="{% url 'core:home' %}">
-        <img src="{% static 'images/blkste2.svg' %}" alt="">
+        <img src="{% static 'images/blkste2.svg' %}" alt=""/>
       </a>
     </div>
   </div>
