--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,10 @@
     {% include "components/head-links.html" %}
 </head>
 <body>
+    <!-- Facebook -->
+    <div id="fb-root"></div>
+    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v7.0" nonce="aaMVllFZ"></script>
+
     <div class="site-wrap">
     {% block content  %}
 
