--- a/templates/home.html
+++ b/templates/home.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% load cloudinary %}
 {% block content %}
-{% include "components/navbar.html" %}
+{% include "components/navbar.html" with active="/home" %}
 
 <div class="container-fluid" id="site-section">
     <video autoplay muted loop id="myVideo">
@@ -19,19 +19,25 @@
                 <div class="dropdown-divider"></div>
                 <a href="{% url 'core:mixes' %}">
                     <li class="list-group-item lgiTrans">
-                        Mixes and Live Sets
+                        Mixes / Tracks
+                    </li>
+                </a>
+                <div class="dropdown-divider"></div>
+                <a href="{% url 'core:streams' %}">
+                    <li class="list-group-item lgiTrans">
+                        Streams
+                    </li>
+                </a>
+                <div class="dropdown-divider"></div>
+                <a href="{% url 'core:social' %}">
+                    <li class="list-group-item lgiTrans">
+                        Socials
                     </li>
                 </a>
                 <div class="dropdown-divider"></div>
                 <a href="">
                     <li class="list-group-item lgiTrans">
-                        Twitch
-                    </li>
-                </a>
-                <div class="dropdown-divider"></div>
-                <a href="">
-                    <li class="list-group-item lgiTrans">
-                        FaceBook
+                        Contact
                     </li>
                 </a>
                 <div class="dropdown-divider"></div>
