--- a/templates/components/footer.html
+++ b/templates/components/footer.html
@@ -2,9 +2,9 @@
 <footer class="footer mb-2">
   <div class="container">
     <div class="row">
-      <div class="col text-center pt-2 align-items-center justify-content-center">
+      <div class="col text-center mt-1 pt-2 align-items-center justify-content-center">
         <a href="http://jharriswebdev.herokuapp.com/" target="_blank" class="social-link m-0 p-0">
-          <span class="text-muted social-link"><i class="far fa-copyright"></i> 2020 J. Harris Web Dev</span>
+          <span class="text-muted social-link small">Site Design: <i class="far fa-copyright"></i> 2020 J. Harris Web Dev</span>
         </a>
       </div>
       <div class="col text-center align-items-center justify-content-center">
