--- a/templates/components/head-links.html
+++ b/templates/components/head-links.html
@@ -6,5 +6,6 @@
 <link rel="stylesheet" href="{% static 'css/normalize.css' %}">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"/>
 <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@400;700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Creepster&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="{% static 'css/style.css' %}">
 <link rel="shortcut icon" type="image/png" href="{% static 'images/blkste.ico' %}"/>
