--- a/templates/home.html
+++ b/templates/home.html
@@ -11,7 +11,7 @@
     <div class="row align-items-center justify-content-center animate__animated animate__fadeIn" id="homeContent">
         <div class="col-md-8">
             <ul class="list-group list-group-flush">
-                <a href="">
+                <a href="{% url 'core:about' %}">
                     <li class="list-group-item lgiTrans">
                         About
                     </li>
@@ -25,7 +25,7 @@
                 <div class="dropdown-divider"></div>
                 <a href="{% url 'core:streams' %}">
                     <li class="list-group-item lgiTrans">
-                        Streams
+                        Stream
                     </li>
                 </a>
                 <div class="dropdown-divider"></div>
@@ -35,7 +35,7 @@
                     </li>
                 </a>
                 <div class="dropdown-divider"></div>
-                <a href="">
+                <a href="{% url 'core:contact' %}">
                     <li class="list-group-item lgiTrans">
                         Contact
                     </li>
