--- a/templates/mixes-and-tracks.html
+++ b/templates/mixes-and-tracks.html
@@ -59,7 +59,9 @@
         </div>
     </div>
 </div>
-{% include "components/footer.html" %}
+<div class="mt-5 mb-4 pt-4 animate__animated animate__fadeIn">
+    {% include "components/footer.html" %}
+</div>
 
 
 {% endblock %}
