--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -1,5 +1,5 @@
 {% load static %}
-<div class="container-fluid">
+<div class="container">
   <nav class="navbar navbar-expand-lg navbar-dark bg-custom animate__animated animate__fadeIn">
     <a class="navbar-brand" href="{% url 'core:home' %}">
       <img src="{% static 'images/blkste2.svg' %}" width="30" height="30" class="d-inline-block align-top" alt="">
