--- a/templates/landing.html
+++ b/templates/landing.html
@@ -14,7 +14,7 @@
   <div class="row text-center align-items-center justify-content-center" id="land-cont">
     <div class="col-md-8 text-center align-items-center justify-content-center m-0 p-0 fixed-top position-relative">
       <a class="m-0 p-0" id="nextPage" href="{% url 'core:home' %}">
-        <h1 class="mb-0 animate__animated animate__fadeIn" style="font-family: 'Creepster', cursive;">ENTER</h1>
+        <h1 class="mb-0 animate__animated animate__fadeIn">ENTER</h1>
         <img class="animate__animated animate__fadeIn" src="{% static 'images/blkste2.svg' %}" alt=""/>
       </a>
     </div>
