fix about fade in

--- a/templates/home.html
+++ b/templates/home.html
@@ -9,7 +9,7 @@
       <source src="{% static 'video/glitch2.mp4' %}" type="video/mp4">
     </video>
     <div class="row align-items-center justify-content-center" id="homeContent">
-        <div class="col-md-8">
+        <div class="col-md-8 animate__animated animate__fadeIn">
             <ul class="list-group list-group-flush">
                 <a href="{% url 'core:about' %}">
                     <li class="list-group-item lgiTrans">
