--- a/templates/components/footer.html
+++ b/templates/components/footer.html
@@ -1,26 +1,31 @@
 {% load static %}
 <footer class="footer mb-2">
-  <div class="container">
-    <div class="row">
-      <div class="col text-center mt-1 pt-2 align-items-center justify-content-center">
-        <a href="http://jharriswebdev.herokuapp.com/" target="_blank" class="social-link m-0 p-0">
-          <span class="text-muted social-link small">Site Design: <i class="far fa-copyright"></i> 2020 J. Harris Web Dev</span>
-        </a>
-      </div>
-      <div class="col text-center align-items-center justify-content-center">
-        <a href="https://www.facebook.com/Bvksite" target="_blank" class="social-link soc-i pr-1">
-          <span class="text-muted social-link"><i class="fab fa-facebook-square"></i></span>
-        </a>
-        <a href="https://twitter.com/blvksite" target="_blank" class="social-link soc-i pr-1">
-          <span class="text-muted social-link"><i class="fab fa-twitter-square"></i></span>
-        </a>
-        <a href="https://soundcloud.com/blvksite" target="_blank" class="social-link soc-i pr-1">
-          <span class="text-muted social-link"><i class="fab fa-soundcloud"></i></span>
-        </a>
-        <a href="https://soundcloud.com/blvksite" target="_blank" class="social-link soc-i pr-1">
-          <span class="text-muted social-link"><i class="fab fa-twitch"></i></span>
-        </a>
-      </div>
+    <div class="container">
+        <div class="row">
+            <div class="col text-center mt-1 pt-2 align-items-center justify-content-center">
+                <a href="https://www.jharriswebdev.com/" target="_blank" class="social-link m-0 p-0">
+                <span class="text-muted social-link small">Site Design: <i class="far fa-copyright"></i> 2020 J. Harris Web Dev</span>
+                </a>
+            </div>
+            <div class="col text-center mt-1 pt-2 align-items-center justify-content-center">
+                <a href="https://www.termsfeed.com/live/3a224419-649c-4285-bc17-534fa1a27e19" target="_blank" class="social-link m-0 p-0">
+                <span class="text-muted social-link small"><i class="fas fa-file-alt"></i> Privacy Policy</span>
+                </a>
+            </div>
+            <div class="col text-center align-items-center justify-content-center">
+                <a href="https://www.facebook.com/Bvksite" target="_blank" class="social-link soc-i pr-1">
+                <span class="text-muted social-link"><i class="fab fa-facebook-square"></i></span>
+                </a>
+                <a href="https://twitter.com/blvksite" target="_blank" class="social-link soc-i pr-1">
+                <span class="text-muted social-link"><i class="fab fa-twitter-square"></i></span>
+                </a>
+                <a href="https://soundcloud.com/blvksite" target="_blank" class="social-link soc-i pr-1">
+                <span class="text-muted social-link"><i class="fab fa-soundcloud"></i></span>
+                </a>
+                <a href="https://soundcloud.com/blvksite" target="_blank" class="social-link soc-i pr-1">
+                <span class="text-muted social-link"><i class="fab fa-twitch"></i></span>
+                </a>
+            </div>
+        </div>
     </div>
-  </div>
 </footer>
