--- a/templates/social-media.html
+++ b/templates/social-media.html
@@ -20,14 +20,14 @@
             <div class="fb-page pt-2" data-href="https://www.facebook.com/bvksite/" data-tabs="timeline" data-width="350" data-height="500" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/bvksite/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/bvksite/">Blvksite</a></blockquote></div>
         </div>
     </div>
-    <div class="row mt-4 pt-2 animate__animated animate__fadeIn">
+    <div class="row mt-5 pt-4 animate__animated animate__fadeIn">
         <div class="col text-center align-items-center justify-content-center">
             <h3>Twitter</h3>
         </div>
     </div>
     <div class="row pt-2 animate__animated animate__fadeIn text-center align-items-center justify-content-center ">
         <div class="col-8">
-            <a class="twitter-timeline pt-2" href="https://twitter.com/blvksite?ref_src=twsrc%5Etfw">Tweets by blvksite</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
+            <a class="twitter-timeline" data-width="350" data-height="500" href="https://twitter.com/blvksite?ref_src=twsrc%5Etfw">Tweets by blvksite</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
         </div>
     </div>
 </div>
