--- a/templates/social-media.html
+++ b/templates/social-media.html
@@ -12,21 +12,66 @@
     <a href="{% url 'core:home' %}" class="animate__animated animate__fadeIn">Back to Home</a>
     <div class="row pt-2 animate__animated animate__fadeIn text-center align-items-center justify-content-center">
         <div class="col text-center align-items-center justify-content-center">
+            <h3>Instagram</h3>
+        </div>
+    </div>
+    <div class="row mt-3 pt-2 animate__animated animate__fadeIn text-center align-items-center justify-content-center">
+        <div class="col-md-6">
+            <div class="container">
+
+                <!-- Container -->
+
+                <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
+                    <div class="carousel-inner">
+                        
+                            {% for post in igs %}
+                                {% if forloop.first %}
+                                <div class="carousel-item active">
+                                {% else %}
+                                <div class="carousel-item">
+                                {% endif %}
+                                <!-- Card -->
+                                    {{ post.embed|safe }}
+                                <!-- Card -->
+                                </div>
+                            {% endfor %}
+                        
+                    </div>
+                    <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </div>
+
+                <!-- Container -->
+
+            </div>
+            
+        </div>
+    </div>
+    <hr>
+    <div class="row mt-5 pt-4 animate__animated animate__fadeIn text-center align-items-center justify-content-center">
+        <div class="col text-center align-items-center justify-content-center">
             <h3>Facebook</h3>
         </div>
     </div>
     <div class="row pt-2 animate__animated animate__fadeIn text-center align-items-center justify-content-center">
-        <div class="col-8">
+        <div class="col-md-8">
             <div class="fb-page pt-2" data-href="https://www.facebook.com/bvksite/" data-tabs="timeline" data-width="350" data-height="500" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/bvksite/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/bvksite/">Blvksite</a></blockquote></div>
         </div>
     </div>
+    <hr>
     <div class="row mt-5 pt-4 animate__animated animate__fadeIn">
         <div class="col text-center align-items-center justify-content-center">
             <h3>Twitter</h3>
         </div>
     </div>
     <div class="row pt-2 animate__animated animate__fadeIn text-center align-items-center justify-content-center ">
-        <div class="col-8">
+        <div class="col-md-8">
             <a class="twitter-timeline" data-width="350" data-height="500" href="https://twitter.com/blvksite?ref_src=twsrc%5Etfw">Tweets by blvksite</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
         </div>
     </div>
